Refactored building/parsing of the JTW tokens